# profiler

./: Cargo.toml  debug_patch.txt  debug_symbols.bat  example_config.toml  final_launch.csv  final_symbols_test.csv  final_test.csv  final_test_admin.csv  final_test_fixed.csv  final_test_v2.csv  final_test_v3.csv  fixed_test.csv  profile_output.csv  symbols_test.csv  symbols_working.csv  test_output.csv
examples/: cpu_intensive.rs
plans/: README.md  architecture.md  cargo-toml.md  project-structure.md  traits.md  traits.rs
src/: config.rs  error.rs  main.rs  profiler.rs  session.rs  types.rs
src/analysis/: aggregator.rs  exporter.rs  flamegraph.rs  function_stats.rs  mod.rs  thread_analyzer.rs
src/cli/: commands.rs  mod.rs  output.rs  progress.rs
src/etw/: controller.rs  mod.rs  processor.rs  provider.rs  session.rs
src/report/: csv.rs  formatter.rs  mod.rs  summary.rs  templates.rs
src/stackwalker/: collector.rs  filter.rs  manager.rs  mod.rs  resolver.rs  unwinder.rs
src/symbols/: cache.rs  loader.rs  manager.rs  mod.rs  resolver.rs
