[package]
name = "etw-profiler"
version = "0.1.0"
edition = "2024"
authors = ["ETW Profiler Team"]
description = "A Windows performance profiler based on ETW"
license = "MIT OR Apache-2.0"
keywords = ["profiler", "etw", "performance", "windows", "sampling"]
categories = ["development-tools::profiling", "os::windows-apis"]
rust-version = "1.85"

[[bin]]
name = "etw-profiler"
path = "src/main.rs"

[dependencies]
# ============================================================================
# Windows API绑定 - 官方Rust Windows绑定
# ============================================================================
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Time",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug_ActiveScript",
    "Win32_System_Kernel",
] }

windows-core = "0.62.2"

# ============================================================================
# 序列化/反序列化
# ============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# ============================================================================
# 异步运行时
# ============================================================================
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
] }

# ============================================================================
# 日志与错误处理
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.18"
anyhow = "1.0"

# ============================================================================
# 命令行参数解析
# ============================================================================
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# ============================================================================
# 数据处理
# ============================================================================
csv = "1.3"

# ============================================================================
# 工具库
# ============================================================================
uuid = { version = "1.10", features = ["v4", "serde"] }

# ============================================================================
# 可选依赖
# ============================================================================
chrono = { version = "0.4", optional = true }

# ============================================================================
# CLI 相关依赖
# ============================================================================
indicatif = "0.17"
console = "0.15"
ctrlc = "3.4"

[features]
default = ["chrono"]
database = []
advanced = ["chrono"]
dev = ["tracing/max_level_debug"]

# ============================================================================
# 开发依赖
# ============================================================================
[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.12"
criterion = { version = "0.8.2", features = ["html_reports"] }

# ============================================================================
# 构建配置
# ============================================================================
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = true
strip = false

[profile.release.build-override]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
